# web-scraper

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/analyzer/: BookAnalyzer.cpp  BookAnalyzer.h
src/discovery/: PageDiscovery.cpp  PageDiscovery.h
src/fetcher/: PageFetcher.cpp  PageFetcher.h
src/products/: Book.cpp  Book.h  Product.cpp  Product.h
src/scraper/: BookScraper.cpp  BookScraper.h
src/url/: Url.cpp  Url.h  urls.txt
